# fast-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  patch_snippet.txt  tmp_segment.txt
crates/core/: Cargo.toml  NOTES.md
crates/core/src/: lib.rs
crates/fast/: NOTES.md
crates/providers/: Cargo.toml  NOTES.md
crates/providers/src/openai/: client.rs  config.rs  mod.rs
crates/tui/: Cargo.toml  NOTES.md
crates/tui/src/: events.rs  main.rs  persist.rs  strings.rs  terminal.rs  theme.rs
crates/tui/src/app/: chat.rs  history.rs  input.rs  mod.rs  search.rs  sessions.rs
crates/tui/src/ui/: mod.ps1  mod.rs
docs/: NOTES-2025-09-06.md
