[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
fast_core = { package = "core", path = "../core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
directories = "5"
url = "2"
pin-project-lite = "0.2"
bytes = "1"
async-stream = "0.3"
twoway = "0.2"
anyhow = "1"
toml = "0.8"
