[package]
name = "tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
fast_core = { package = "core", path = "../core" }
providers = { path = "../providers" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread","macros","time"] }
once_cell = "1.19"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"

ratatui = "0.29"
crossterm = "0.29"
anyhow = "1"
unicode-segmentation = "1.12"
textwrap = "0.16"
unicode-width = "0.2"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

